@@ -8,6 +8,7 @@ Version 1.0.1
 - Fixed camera behaviour with pushable blocks.
 - Fixed minecart unduck on inclines.
 - Fixed quadbike dismount with jump key and allow to shoot big gun with action key.
+- Fixed resurfacing on underwater death.
 - Prevent title music audio from starting in a random place.
 - Update harpoon speed on room change.
 
